--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <h1>Click Here for Free Robux!</h1>
         <button class="clickbait-btn" id="clickbaitBtn">Click Here!</button>
         <div class="surprise-message" id="surpriseMessage">
-            <p>That's right, click it like a good boy! 😄</p>
+            <p>That's right, click it like a good boy</p>
         </div>
     </div>
 
